# betatetris-tablebase

./: .gitignore  CMakeLists.txt  vcpkg.json
python/: fceux.py
python/tetris/: setup.py
src/: board_set.cpp  board_set.h  constexpr_helpers.h  evaluate.cpp  files.cpp  inspect.cpp  io_helpers.h  main.cpp  move.cpp  play.h  sample_svd.cpp  sample_train.cpp  server.cpp
test/: evaluate_test.cpp
